[package]
name = "kezboard_switcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kezboard_switcher"
path = "src/bin/main.rs"

[dependencies]
native_types = { path = "../native_types" }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
dirs = "5.0"
